--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
 </head>
 
 <body>
+    <section id="header">
+        <button type="button" class="headerbutton" id="about">About</button>
+        <button type="button" class="headerbutton" id="contact">Contact</button>
+        <button type="button" class="headerbutton" id="portfolio">Portfolio</button>
+        <button type="button" class="headerbutton" id="resume">Resume</button>
+    </section >
+    <section id="display">
+
+    </section>
   
     <script type="text/javascript" src="assets/javascript/javascript.js"></script>
 </body>
