--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <button type="button" class="headerbutton" id="resume">Resume</button>
     </section >
     <section id="display">
+      <div id="home">
+        <p id="hometext">I will think of a cool message to put here.</p>
+        <!-- <embed src="assets/pdf/Agatha Kiecun Resume.pdf" type="application/pdf"   height="300px" width="100%" class="responsive"> -->
+          <!-- <a href="assets/pdf/Agatha Kiecun Resume.pdf">download</a> -->
+      </div>
+
+
     </section>
     
             <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Open modal for @getbootstrap</button> -->
