--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Agatha Kiecun</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 
 <body>
     <section id="header">
-        <button type="button" class="headerbutton" id="about">About</button>
-        <button type="button" class="headerbutton" id="contact">Contact</button>
-        <button type="button" class="headerbutton" id="portfolio">Portfolio</button>
-        <button type="button" class="headerbutton" id="resume">Resume</button>
+        <button type="button" class="hvr-bounce-out" id="about">About</button>
+        <button type="button" class="hvr-bounce-out" id="contact">Contact</button>
+        <button type="button" class="hvr-bounce-out" id="portfolio">Portfolio</button>
+        <button type="button" class="hvr-bounce-out" id="resume">Resume</button>
     </section >
     <section id="display">
       <div id="home">
-        <p id="hometext">I will think of a cool message to put here.</p>
+        <p class="animated jackInTheBox" id="hometext">I will think of a cool message to put here.</p>
+        <!-- <h1 class="animated jackInTheBox">Example</h1> -->
+        <!-- <h1 class="site__title mega">Hello</h1> -->
         <!-- <embed src="assets/pdf/Agatha Kiecun Resume.pdf" type="application/pdf"   height="300px" width="100%" class="responsive"> -->
-          <!-- <a href="assets/pdf/Agatha Kiecun Resume.pdf">download</a> -->
+
       </div>
 
 
@@ -67,12 +69,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One" rel="stylesheet">
     <script src="https://smtpjs.com/v2/smtp.js">
     </script>
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script type="text/javascript" src="assets/javascript/javascript.js"></script>
+
 </body>
 
 </html>
