--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </section >
     <section id="display">
       <div id="home">
-        <p class="animated jackInTheBox" id="hometext">I will think of a cool message to put here.</p>
+        <div id="hometext" class="animated jackInTheBox">
+          <p>Agatha Kiecun</p>
+          <br>
+           <p>Full Stack Developer.</p></div>
         <!-- <h1 class="animated jackInTheBox">Example</h1> -->
         <!-- <h1 class="site__title mega">Hello</h1> -->
         <!-- <embed src="assets/pdf/Agatha Kiecun Resume.pdf" type="application/pdf"   height="300px" width="100%" class="responsive"> -->
