--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <section id="header">
-        <button type="button" class="hvr-bounce-out" id="about">About</button>
-        <button type="button" class="hvr-bounce-out" id="contact">Contact</button>
-        <button type="button" class="hvr-bounce-out" id="portfolio">Portfolio</button>
-        <button type="button" class="hvr-bounce-out" id="resume">Resume</button>
+        <button type="button" class="hvr-wobble-top" id="about">About</button>
+        <button type="button" class="hvr-wobble-top" id="contact">Contact</button>
+        <button type="button" class="hvr-wobble-top" id="portfolio">Portfolio</button>
+        <button type="button" class="hvr-wobble-top" id="resume">Resume</button>
     </section >
     <p id="qspace"></p>
     <section id="display">
