--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="hometext" class="animated jackInTheBox">
           <p>Agatha Kiecun</p>
           <br>
-           <p>Full Stack Developer.</p></div>
+           <p>Full Stack Developer</p></div>
     
       </div>
      
