font and contact page edit

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script type="text/javascript" src="assets/javascript/javascript.js"></script>
-
-</body>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+  </body>
 
 </html>
