new portfolio links

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <section id="header">
+        <a href="https://secret-gorge-58585.herokuapp.com/" type="button" class="hvr-wobble-top" id="new">New Portfolio</a>
         <button type="button" class="hvr-wobble-top" id="about">About</button>
         <button type="button" class="hvr-wobble-top" id="contact">Contact</button>
         <button type="button" class="hvr-wobble-top" id="portfolio">Portfolio</button>
@@ -22,7 +23,11 @@
         <div id="hometext" class="animated jackInTheBox">
           <p>Agatha Kiecun</p>
           <br>
-           <p>Full Stack Developer</p></div>
+           <p>Full Stack Developer</p>
+           <br>
+           <a href="https://secret-gorge-58585.herokuapp.com/">Visit my new portfolio</a>
+
+          </div>
     
       </div>
      
