--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <br>
            <p>Full Stack Developer</p>
            <br>
-           <a href="https://secret-gorge-58585.herokuapp.com/">Visit my new portfolio</a>
+           <a href="https://secret-gorge-58585.herokuapp.com/">Visit my new portfolio at https://secret-gorge-58585.herokuapp.com</a>
 
           </div>
     
